--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "firebase": "8.9.0",
     "fontfaceobserver": "2.1.0",
     "husky": "7.0.0",
     "i18next": "20.3.2",
@@ -60,6 +61,7 @@
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "10.0.0",
     "typescript": "4.2.2",
+    "uuid": "8.3.2",
     "web-vitals": "2.1.0"
   },
   "scripts": {
